Completed Simple Calculator

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -322,7 +322,7 @@
             android:textSize="25sp"
             android:backgroundTint="@color/btnBgBlue"
             android:textColor="@color/white"
-            android:onClick="onDigit"
+            android:onClick="onEqual"
             tools:ignore="UsingOnClickInXml"
             />
 
